@@ -7,6 +7,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="icon" type="image/x-icon" href="/skeletonjam.png">
   </head>
+  
   <body>
   
     <header>
@@ -28,58 +29,62 @@
     <hr>
     <br>
     
-      <article>
-        <h2>My Thanks for an Updated <i>Doctor Who</i> Timeline</h2>
-        <p><b>8-10-24</b></p>
-        <p>I would like to express my thanks to Tim Bradley over at <a href="https://bradleybasement.wordpress.com/">Bradley's Basement</a> for keeping his amazing <i>Doctor Who</i> timelines up to date. I found them awhile ago, 
+    
+    
+    <article>
+      <h2>My Thanks for an Updated <i>Doctor Who</i> Timeline</h2>
+      <p><b>8-10-24</b></p>
+      <p>I would like to express my thanks to Tim Bradley over at <a href="https://bradleybasement.wordpress.com/">Bradley's Basement</a> for keeping his amazing <i>Doctor Who</i> timelines up to date. I found them awhile ago, 
         and have been using them as a reference for when events occur in the Doctor's personal timeline, and for listening to the Big Finish Audio Dramas in order. It really has been an incredibly useful resource and I couldn't 
         thank him enough.</p>
-        <p>Currently I am using the <a href="https://bradleybasement.wordpress.com/sci-fi/doctor-who/doctor-who-timelines/the-doctors-timelines-index/the-fifth-doctors-timeline/">Fifth Doctor's Timeline</a> to listen to and read 
+      <p>Currently I am using the <a href="https://bradleybasement.wordpress.com/sci-fi/doctor-who/doctor-who-timelines/the-doctors-timelines-index/the-fifth-doctors-timeline/">Fifth Doctor's Timeline</a> to listen to and read 
         all of the Big Finish Audio Dramas and the print books.</p>
-      </article>
+    </article>
       
-      <br>
+    <br>
       
-      <article>
-        <h2><i>Star Wars: The Bad Batch</i> Season 3 thoughts</h2>
-        <p><b>8-6-24</b></p>
-        <p>This season of <i>The Bad Batch</i> was absolutely amazing, with so many highs and lows, and everthing in between, the return of crosshair was awesome, and the ending was just so, so very good.</p>
-        <p>One of my favorite parts is the Reunion episode which was great, with all the dynamics of someone who was initially good, then bad, returning and becoming better. I loved the send off so much because it just shows the 
+    <article>
+      <h2><i>Star Wars: The Bad Batch</i> Season 3 thoughts</h2>
+      <p><b>8-6-24</b></p>
+      <p>This season of <i>The Bad Batch</i> was absolutely amazing, with so many highs and lows, and everthing in between, the return of crosshair was awesome, and the ending was just so, so very good.</p>
+      <p>One of my favorite parts is the Reunion episode which was great, with all the dynamics of someone who was initially good, then bad, returning and becoming better. I loved the send off so much because it just shows the 
         close of one chapter, and the opening of another.</p>
-        <p>All in all, it was an absolute banger of a season and I loved every second of it. I am actually pretty excited to start <i>The Acolyte</i>, so that will be fun.</p>
-      </article>
+      <p>All in all, it was an absolute banger of a season and I loved every second of it. I am actually pretty excited to start <i>The Acolyte</i>, so that will be fun.</p>
+    </article>
       
-      <br>
+    <br>
       
-      <article>
-        <h2>The Impact that <i>Avenged Sevenfold</i>'s Music has had on Me</h2>
-        <p><b>8-5-24</b></p>
-        <p><i>Avenged Sevenfold</i> are to me, masters of the genre, who really know how to create absolute bangers that can wrench at your heart and will tell a story that can change how you look at things.</p>
-        <p>When I was first introduced to <i>Avenged Sevenfold</i> in my Sophmore year of High-School (2019), their music took me by storm. At that point in time I was new to Metal as a genre, I had started out with 
+    <article>
+      <h2>The Impact that <i>Avenged Sevenfold</i>'s Music has had on Me</h2>
+      <p><b>8-5-24</b></p>
+      <p><i>Avenged Sevenfold</i> are to me, masters of the genre, who really know how to create absolute bangers that can wrench at your heart and will tell a story that can change how you look at things.</p>
+      <p>When I was first introduced to <i>Avenged Sevenfold</i> in my Sophmore year of High-School (2019), their music took me by storm. At that point in time I was new to Metal as a genre, I had started out with 
         Nu-Metal and Death Metal bands like <i>Slipknot</i> and <i>Orbit Culture</i>, but when I was told there was a band that did Call of Duty (specifically Black Ops) tie-in songs, I was skeptical that it would be good. 
         But as I listened to 'Carry On', I realized that they were way more than good, they were the pinnacle of melodic yet impactful Metal, and exactly what I was looking for. I continued on to listen to their
         albums starting with <i>'City of Evil'</i>, and now I would hate to imagine what my life would be like if I hadn't been introduced to them, and I do hope someday I will be able to go to a concert.</p>
-        <p>Some of my Favorite songs are 'Bat Country', 'M.I.A.', 'Almost Easy', 'Afterlife', 'Danger Line', 'Victim', 'Crimson Day', 'Shepherd of Fire', 'Higher', 'Cosmic', 'Nobody', and 'Carry On'.</p>
-      </article>
+      <p>Some of my Favorite songs are 'Bat Country', 'M.I.A.', 'Almost Easy', 'Afterlife', 'Danger Line', 'Victim', 'Crimson Day', 'Shepherd of Fire', 'Higher', 'Cosmic', 'Nobody', and 'Carry On'.</p>
+    </article>
       
-      <br>
+    <br>
+    <hr>
+    <br>
       
-      <div class="archive">
-        <h2>Archive</h2>
-        <ul>
-          <li><a href="./blog_archive/jul2024.html">July 2024</a></li>
-          <li><a href="./blog_archive/jun2024.html">June 2024</a></li>
-        </ul>
-      </div>
+    <div class="archive">
+      <h2>Archive</h2>
+      <ul>
+        <li><a href="./blog_archive/jul2024.html">July 2024</a></li>
+        <li><a href="./blog_archive/jun2024.html">June 2024</a></li>
+      </ul>
+    </div>
       
-      <br>
-      <hr>
+    <br>
+    <hr>
       
-      <footer>
+    <footer>
       <h3>Questions/Concerns/Suggestions</h3>
       <p>billtheguy3023@gmail.com<p>
       <p>&copy;2024 - All Rights Reserverd - William S. Jaques III.</p>
-      </footer>
+    </footer>
   
   </body>
 </html>
