@@ -59,6 +59,7 @@
     <p>billtheguy3023@gmail.com</p>
     <a href="/changelog.txt">Changelogs</a>
     <p>&copy;2024 - All Rights Reserverd - William S. Jaques III.</p>
+    <img src="./neocities.png">
     </footer>
   </body>
 </html>
