@@ -1,4 +1,5 @@
 8-20-24
+index.html - Added neocities image.
 blog.html - added an archive
 
 8-17-24
